service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: example
spec:
  ports:
    - name: "3000"
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: app
  type: ClusterIP
