service/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app
  namespace: example
spec:
  host: app
  subsets: []
